// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown/> <Drop> should render Drop 1`] = `<div />`;

exports[`<Dropdown/> <Drop> should render Drop 2`] = `
<div>
  <div
    style="height: 90rem; width: 750rem;"
  />
</div>
`;

exports[`<Dropdown/> should click outside of dropdrown 1`] = `
<div>
  <section>
    <div
      class="StyledDropdown__Wrapper-sc-1btfu08-0 dQNbzS"
      height="2.488rem"
    >
      <button
        aria-controls="dropdown1"
        aria-haspopup="true"
        aria-selected="true"
        class="StyledDropdown__Activator-sc-1btfu08-1 hAeXvx"
        data-testid="dropdown-activator"
        id="dropdown-activator"
        type="button"
      >
        <span>
          Selection
        </span>
        <img
          alt=""
        />
      </button>
    </div>
  </section>
</div>
`;

exports[`<Dropdown/> should render with default props and border left none 1`] = `
<div>
  <div
    class="StyledDropdown__Wrapper-sc-1btfu08-0 dQNbzS"
    height="2.488rem"
  >
    <button
      aria-controls="dropdown1"
      aria-haspopup="true"
      aria-selected="true"
      class="StyledDropdown__Activator-sc-1btfu08-1 bONsQJ"
      data-testid="dropdown-activator"
      id="dropdown-activator"
      type="button"
    >
      <span />
      <img
        alt=""
      />
    </button>
  </div>
</div>
`;

exports[`<Dropdown/> should render with default props and borders 1`] = `
<div>
  <div
    class="StyledDropdown__Wrapper-sc-1btfu08-0 dQNbzS"
    height="2.488rem"
  >
    <button
      aria-controls="dropdown1"
      aria-haspopup="true"
      aria-selected="true"
      class="StyledDropdown__Activator-sc-1btfu08-1 bONsQJ"
      data-testid="dropdown-activator"
      id="dropdown-activator"
      type="button"
    >
      <span />
      <img
        alt=""
      />
    </button>
  </div>
</div>
`;
